--- a/src/index.ejs
+++ b/src/index.ejs
@@ -50,7 +50,7 @@
       {
         "imports": {
           "@moby/root-config": "//localhost:9000/moby-root-config.js",
-          "@org/header": "//localhost:4201/main.js",
+          "@org/header": "//localhost:4201/main.js"
         }
       }
     </script>
